[project]
name = "dagster-sftp"
description = "Dagster integration library for interacting with SFTP Servers"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "anyio>=4.11.0",
    "asyncssh>=2.21.1",
    "dagster"
]
dynamic = ["version"] # version comes from git tag


[tool.uv]
dev-dependencies = [
    "asyncssh[bcrypt,pyopenssl]>=2.21.1",
]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
fallback-version = "0.0.0"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"