[project]
name = "dagster-sftp"
description = "Dagster integration library for interacting with SFTP Servers"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "anyio>=4.11.0",
    "asyncssh>=2.21.1",
    "dagster>=1.8.0",
]
dynamic = ["version"]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
    "ty==0.0.37",
    "pytest-mock>=3.15.1",
    "testcontainers>=4.4.0",
    "pytest-cov>=7.0.0",
    "asyncssh[bcrypt,pyopenssl]>=2.21.1",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_sftp"]

[tool.setuptools.dynamic]
version = {attr = "dagster_sftp.__version__"}

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-attribute-access = "ignore"
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
invalid-assignment = "ignore"
invalid-raise = "ignore"
invalid-type-form = "ignore"
invalid-method-override = "ignore"
missing-argument = "ignore"
unknown-argument = "ignore"
too-many-positional-arguments = "ignore"
no-matching-overload = "ignore"
unsupported-operator = "ignore"
empty-body = "ignore"
call-non-callable = "ignore"
unused-ignore-comment = "ignore"
unused-type-ignore-comment = "ignore"
invalid-parameter-default = "ignore"
deprecated = "ignore"
redundant-cast = "ignore"
