[project]
name = "dagster-sftp"
description = "Dagster integration library for interacting with SFTP Servers"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "anyio>=4.11.0",
    "asyncssh>=2.21.1",
    "dagster>=1.8.0",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "ty==0.0.37",
    "pytest-mock>=3.15.1",
    "testcontainers>=4.4.0",
    "pytest-cov>=7.0.0",
    "asyncssh[bcrypt,pyopenssl]>=2.21.1",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_sftp"]

[tool.setuptools.dynamic]
version = {attr = "dagster_sftp.__version__"}
