[project]
name = "dagster-sharepoint"
description = "Dagster integration for SharePoint document management using Microsoft Graph API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster",
    "requests>=2.31.0",
]
dynamic = ["version"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "semver"
fallback-version = "0.0.0"

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"
