[project]
name = "dagster-teradata"
description = "<insert description here>"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "dagster>=1.8.0",
    "teradatasql",
    "paramiko",
]
dynamic = ["version"]

[tool.uv]
dev-dependencies = [
    "ruff",
    "pytest",
    "ty==0.0.37",
]

[project.optional-dependencies]
azure = ["dagster-azure"]
aws = [
  "boto3",
  "dagster-aws",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = [
    "dagster_teradata",
    "dagster_teradata.ttu",
    "dagster_teradata.ttu.utils"
]

[tool.setuptools.dynamic]
version = {attr = "dagster_teradata.__version__"}

[tool.ty.rules]
unresolved-import = "ignore"
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
call-non-callable = "ignore"
missing-argument = "ignore"
unknown-argument = "ignore"
too-many-positional-arguments = "ignore"
unresolved-attribute = "ignore"
invalid-attribute-access = "ignore"
invalid-assignment = "ignore"
invalid-raise = "ignore"
invalid-type-form = "ignore"
invalid-method-override = "ignore"
no-matching-overload = "ignore"
unsupported-operator = "ignore"
empty-body = "ignore"
unused-ignore-comment = "ignore"
unused-type-ignore-comment = "ignore"
invalid-parameter-default = "ignore"
deprecated = "ignore"
redundant-cast = "ignore"
