[project]
name = "dagster-xquik"
description = "Dagster resource for read-only X/Twitter data workflows through Xquik."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.8.0",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "pyright>=1.1.386",
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_xquik"]

[tool.setuptools.dynamic]
version = {attr = "dagster_xquik.__version__"}

[tool.pyright]
include = ["dagster_xquik", "dagster_xquik_tests"]
pythonVersion = "3.10"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
testpaths = ["dagster_xquik_tests"]
