[project]
name = "dagster-xquik"
description = "Dagster resource for read-only X/Twitter data workflows through Xquik."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster>=1.8.0",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "ty==0.0.37",
    "pytest",
    "ruff",
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dagster_xquik"]

[tool.setuptools.dynamic]
version = {attr = "dagster_xquik.__version__"}

[tool.ty.environment]
python-version = "3.10"

[tool.ty.src]
include = ["dagster_xquik", "dagster_xquik_tests"]
[tool.pytest.ini_options]
testpaths = ["dagster_xquik_tests"]

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-attribute-access = "ignore"
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
invalid-assignment = "ignore"
invalid-raise = "ignore"
invalid-type-form = "ignore"
invalid-method-override = "ignore"
missing-argument = "ignore"
unknown-argument = "ignore"
too-many-positional-arguments = "ignore"
no-matching-overload = "ignore"
unsupported-operator = "ignore"
empty-body = "ignore"
call-non-callable = "ignore"
unused-ignore-comment = "ignore"
unused-type-ignore-comment = "ignore"
invalid-parameter-default = "ignore"
deprecated = "ignore"
redundant-cast = "ignore"
