[project]
name = "dagster-pipes-java"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dagster-aws>=0.25.0",
    "dagster>=1.8.9",
]

[tool.uv]
dev-dependencies = [
    "dagster-webserver>=1.8.9",
    "ty==0.0.37",
    "pytest>=8.3.3",
    "ruff>=0.6.8",
    "dagster-pipes-tests",
]

[tool.uv.sources]
dagster-pipes-tests = { path = "../../tests/dagster-pipes-tests", editable = true }

[tool.pytest.ini_options]
addopts = "-s "
color = "yes"
testpaths = ["tests"]

[tool.ty.rules]
unresolved-import = "ignore"
unresolved-attribute = "ignore"
invalid-attribute-access = "ignore"
invalid-argument-type = "ignore"
invalid-return-type = "ignore"
invalid-assignment = "ignore"
invalid-raise = "ignore"
invalid-type-form = "ignore"
invalid-method-override = "ignore"
missing-argument = "ignore"
unknown-argument = "ignore"
too-many-positional-arguments = "ignore"
no-matching-overload = "ignore"
unsupported-operator = "ignore"
empty-body = "ignore"
call-non-callable = "ignore"
unused-ignore-comment = "ignore"
unused-type-ignore-comment = "ignore"
invalid-parameter-default = "ignore"
deprecated = "ignore"
redundant-cast = "ignore"
